Removed pre-meet screen on phones.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Free JavaScript classes brimming with critical thinking activities, enriching code labs, inspiring projects, and more. Learn quintessential skills required for competing in this age of technology.",
   "version": "2.1.4",
   "scripts": {
-    "start": "npm run format && npm run reset && gatsby build && cp -R public govirtuoso.org && gatsby serve",
+    "start": "npm run reset && npm run format && gatsby build && cp -R public govirtuoso.org && gatsby serve",
     "test": "npm run format && gatsby develop",
     "reset": "gatsby clean && rm -rf govirtuoso.org",
     "format": "prettier --write \"**/*.{js,jsx,scss,json}\""
